fix(table): remove extra padding for sortable cell

--- a/packages/react/src/components/Table/_table.scss
+++ b/packages/react/src/components/Table/_table.scss
@@ -27,10 +27,6 @@ table.#{$prefix}--side-nav--data-table {
   max-width: 0;
 }
 
-td.#{$iot-prefix}--table__cell--sortable {
-  padding-right: $spacing-09;
-}
-
 .#{$iot-prefix}--data-table--resize td {
   word-break: break-all;
 }
@@ -59,10 +55,6 @@ html[dir='rtl'] {
   }
   .#{$iot-prefix}--expanded-tablerow > td * {
     text-align: right;
-  }
-
-  td.#{$iot-prefix}--table__cell--sortable {
-    padding-left: $spacing-08;
   }
 }
 
